--- a/me.html
+++ b/me.html
@@ -8,6 +8,15 @@ License: https://webthemez.com/license
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7Y4FNYEEZ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7Y4FNYEEZ2');
+</script>
     <meta charset="utf-8">
     <title>VR科普馆 | 关于作者</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -124,8 +133,9 @@ License: https://webthemez.com/license
 
         </div>
     </section><!-- #call-to-action -->
-    <div class="say">悄悄给自己打个广告（绝对不是夹带私货！）：NatureCraft MCVR（我的世界VR）服务器<br>想一起玩的朋友请加群723646605了解详情~
+    <div class="say">友链：<a href="https://naturecraft.cn">naturecraft.cn</a>
     </div>
+
 
 
 
