--- a/device.html
+++ b/device.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7Y4FNYEEZ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7Y4FNYEEZ2');
+</script>
     <meta charset="utf-8">
     <title>VR科普馆 | VR设备图鉴</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
