--- a/term.html
+++ b/term.html
@@ -8,6 +8,15 @@ License: https://webthemez.com/license
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7Y4FNYEEZ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7Y4FNYEEZ2');
+</script>
     <meta charset="utf-8">
     <title>VR科普馆 | VR术语科普</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
